--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
+      margin-bottom: 1.5rem;
       max-width: 300px;
       color: white;
     }
