--- a/style.css
+++ b/style.css
@@ -321,8 +321,12 @@
       top: -2rem;
       left: 50%;
       transform: translateX(-50%);
-      text-align: center;
+      display: inline-flex;    /* line up title + status */
+      gap: 0.5rem;
+      z-index: 5;
+      /*text-align: center; */
       pointer-events: none;
+      
     }
 
     .modal-image-wrapper img {
@@ -334,12 +338,14 @@
 
     #modal-art-title {
       font-weight: bold;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.4rem;
+      line-height: 1;
     }
 
     #modal-art-status {
       font-style: italic;
       opacity: 0.85;
+      line-height: 1;
     }
 
 
@@ -413,6 +419,10 @@
     }
     
     /* Image carousel  */
+
+    .carousel {
+      position: relative;
+    }
 
     .art-piece { position: relative; max-width: 300px; margin: 1rem; }
     /* hide all slides by default */
